--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
 <h1>Hello World!</h1>
+
+<iframe src="https://ip.skk.moe/simple" style="width: 100%; border: 0"></iframe>
+<!-- 暗色模式 -->
+<iframe src="https://ip.skk.moe/simple-dark" style="width: 100%; border: 0"></iframe>
